python/assistant/quantgrid/python/xl/antlr/FormulaParser.py
# Generated from Formula.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FormulaParser ( Parser ):

    grammarFileName = "Formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'MOD'", "'^'", 
                     "'AND'", "'OR'", "'<'", "'>'", "'='", "'<='", "'>='", 
                     "'<>'", "'&'", "'NOT'", "'$'", "'NA'", "'('", "','", 
                     "')'", "'.'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "FLOAT", "IDENTIFIER", "STRING_LITERAL", 
                      "FIELD_NAME", "MULTI_WORD_TABLE_IDENTIFIER", "LINE_BREAK", 
                      "WS" ]

    RULE_formula = 0
    RULE_number = 1
    RULE_string = 2
    RULE_function_name = 3
    RULE_table_name = 4
    RULE_field_name = 5
    RULE_bin_add_sub = 6
    RULE_bin_mul_div_mod = 7
    RULE_bin_pow = 8
    RULE_bin_and = 9
    RULE_bin_or = 10
    RULE_bin_compare = 11
    RULE_bin_concat = 12
    RULE_uni_op = 13
    RULE_query_row = 14
    RULE_na_expression = 15
    RULE_expression = 16

    ruleNames =  [ "formula", "number", "string", "function_name", "table_name", 
                   "field_name", "bin_add_sub", "bin_mul_div_mod", "bin_pow", 
                   "bin_and", "bin_or", "bin_compare", "bin_concat", "uni_op", 
                   "query_row", "na_expression", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    FLOAT=25
    IDENTIFIER=26
    STRING_LITERAL=27
    FIELD_NAME=28
    MULTI_WORD_TABLE_IDENTIFIER=29
    LINE_BREAK=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(FormulaParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(FormulaParser.EOF, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_formula

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)




    def formula(self):

        localctx = FormulaParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.expression(0)
            self.state = 35
            self.match(FormulaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(FormulaParser.FLOAT, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = FormulaParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(FormulaParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(FormulaParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = FormulaParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(FormulaParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_function_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_name" ):
                return visitor.visitFunction_name(self)
            else:
                return visitor.visitChildren(self)




    def function_name(self):

        localctx = FormulaParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(FormulaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def MULTI_WORD_TABLE_IDENTIFIER(self):
            return self.getToken(FormulaParser.MULTI_WORD_TABLE_IDENTIFIER, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_table_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable_name" ):
                return visitor.visitTable_name(self)
            else:
                return visitor.visitChildren(self)




    def table_name(self):

        localctx = FormulaParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_table_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            _la = self._input.LA(1)
            if not(_la==26 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELD_NAME(self):
            return self.getToken(FormulaParser.FIELD_NAME, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_field_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = FormulaParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(FormulaParser.FIELD_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_add_subContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_add_sub

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_add_sub" ):
                return visitor.visitBin_add_sub(self)
            else:
                return visitor.visitChildren(self)




    def bin_add_sub(self):

        localctx = FormulaParser.Bin_add_subContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bin_add_sub)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_mul_div_modContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_mul_div_mod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_mul_div_mod" ):
                return visitor.visitBin_mul_div_mod(self)
            else:
                return visitor.visitChildren(self)




    def bin_mul_div_mod(self):

        localctx = FormulaParser.Bin_mul_div_modContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bin_mul_div_mod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_powContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_pow

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_pow" ):
                return visitor.visitBin_pow(self)
            else:
                return visitor.visitChildren(self)




    def bin_pow(self):

        localctx = FormulaParser.Bin_powContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bin_pow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(FormulaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_and

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_and" ):
                return visitor.visitBin_and(self)
            else:
                return visitor.visitChildren(self)




    def bin_and(self):

        localctx = FormulaParser.Bin_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bin_and)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(FormulaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_or

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_or" ):
                return visitor.visitBin_or(self)
            else:
                return visitor.visitChildren(self)




    def bin_or(self):

        localctx = FormulaParser.Bin_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bin_or)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(FormulaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_compareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_compare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_compare" ):
                return visitor.visitBin_compare(self)
            else:
                return visitor.visitChildren(self)




    def bin_compare(self):

        localctx = FormulaParser.Bin_compareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bin_compare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_concatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_bin_concat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_concat" ):
                return visitor.visitBin_concat(self)
            else:
                return visitor.visitChildren(self)




    def bin_concat(self):

        localctx = FormulaParser.Bin_concatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bin_concat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(FormulaParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Uni_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_uni_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUni_op" ):
                return visitor.visitUni_op(self)
            else:
                return visitor.visitChildren(self)




    def uni_op(self):

        localctx = FormulaParser.Uni_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_uni_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==2 or _la==16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_rowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_query_row

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery_row" ):
                return visitor.visitQuery_row(self)
            else:
                return visitor.visitChildren(self)




    def query_row(self):

        localctx = FormulaParser.Query_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_query_row)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(FormulaParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Na_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_na_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNa_expression" ):
                return visitor.visitNa_expression(self)
            else:
                return visitor.visitChildren(self)




    def na_expression(self):

        localctx = FormulaParser.Na_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_na_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(FormulaParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprFieldReferenceContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def field_name(self):
            return self.getTypedRuleContext(FormulaParser.Field_nameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprFieldReference" ):
                return visitor.visitExprFieldReference(self)
            else:
                return visitor.visitChildren(self)


    class ExprDollarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def query_row(self):
            return self.getTypedRuleContext(FormulaParser.Query_rowContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprDollar" ):
                return visitor.visitExprDollar(self)
            else:
                return visitor.visitChildren(self)


    class ExprNaContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def na_expression(self):
            return self.getTypedRuleContext(FormulaParser.Na_expressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNa" ):
                return visitor.visitExprNa(self)
            else:
                return visitor.visitChildren(self)


    class ExprMulDivModContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_mul_div_mod(self):
            return self.getTypedRuleContext(FormulaParser.Bin_mul_div_modContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMulDivMod" ):
                return visitor.visitExprMulDivMod(self)
            else:
                return visitor.visitChildren(self)


    class ExprTableNameContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def table_name(self):
            return self.getTypedRuleContext(FormulaParser.Table_nameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprTableName" ):
                return visitor.visitExprTableName(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_add_sub(self):
            return self.getTypedRuleContext(FormulaParser.Bin_add_subContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprUnaryOperatorContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def uni_op(self):
            return self.getTypedRuleContext(FormulaParser.Uni_opContext,0)

        def expression(self):
            return self.getTypedRuleContext(FormulaParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprUnaryOperator" ):
                return visitor.visitExprUnaryOperator(self)
            else:
                return visitor.visitChildren(self)


    class ExprNumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(FormulaParser.NumberContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNumber" ):
                return visitor.visitExprNumber(self)
            else:
                return visitor.visitChildren(self)


    class ExprGenericFieldSliceContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(FormulaParser.ExpressionContext,0)

        def field_name(self):
            return self.getTypedRuleContext(FormulaParser.Field_nameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprGenericFieldSlice" ):
                return visitor.visitExprGenericFieldSlice(self)
            else:
                return visitor.visitChildren(self)


    class ExprCompareContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_compare(self):
            return self.getTypedRuleContext(FormulaParser.Bin_compareContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprCompare" ):
                return visitor.visitExprCompare(self)
            else:
                return visitor.visitChildren(self)


    class ExprMemberFunctionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def function_name(self):
            return self.getTypedRuleContext(FormulaParser.Function_nameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMemberFunction" ):
                return visitor.visitExprMemberFunction(self)
            else:
                return visitor.visitChildren(self)


    class ExprOrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_or(self):
            return self.getTypedRuleContext(FormulaParser.Bin_orContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprOr" ):
                return visitor.visitExprOr(self)
            else:
                return visitor.visitChildren(self)


    class ExprTableFieldSliceContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def table_name(self):
            return self.getTypedRuleContext(FormulaParser.Table_nameContext,0)

        def field_name(self):
            return self.getTypedRuleContext(FormulaParser.Field_nameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprTableFieldSlice" ):
                return visitor.visitExprTableFieldSlice(self)
            else:
                return visitor.visitChildren(self)


    class ExprConcatContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_concat(self):
            return self.getTypedRuleContext(FormulaParser.Bin_concatContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprConcat" ):
                return visitor.visitExprConcat(self)
            else:
                return visitor.visitChildren(self)


    class ExprStringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(FormulaParser.StringContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprString" ):
                return visitor.visitExprString(self)
            else:
                return visitor.visitChildren(self)


    class ExprListContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)


    class ExprAndContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_and(self):
            return self.getTypedRuleContext(FormulaParser.Bin_andContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAnd" ):
                return visitor.visitExprAnd(self)
            else:
                return visitor.visitChildren(self)


    class ExprPowContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExpressionContext,i)

        def bin_pow(self):
            return self.getTypedRuleContext(FormulaParser.Bin_powContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPow" ):
                return visitor.visitExprPow(self)
            else:
                return visitor.visitChildren(self)


    class ExprParenthesisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(FormulaParser.ExpressionContext,0)

